<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/padding_NestedScrolView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_NeighbourViewActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".ui.neighbour_list.NeighbourViewActivity">


        <ImageView
            android:id="@+id/imageView_Avatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_Image_Avatar"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:importantForAccessibility="no" />


        <TextView
            android:id="@+id/Text_Prenom_Neighbour_Avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_Prenom"
            android:layout_marginBottom="@dimen/margin_Bottom_Prenom"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_Prenom_Size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_Avatar"
            app:layout_constraintStart_toStartOf="@+id/imageView_Avatar"
            tools:text="@tools:sample/first_names" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_favoris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_end_Buttom_Favori"
            android:clickable="true"
            android:focusable="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star_border_white_24dp"
            app:backgroundTint="@android:color/white"
            app:elevation="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_Avatar"
            app:layout_constraintEnd_toEndOf="@+id/cardViewInfo"
            app:layout_constraintTop_toBottomOf="@+id/imageView_Avatar"
            app:tint="@color/colorFavori" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_start"
            android:layout_marginTop="@dimen/margin_top_card"
            android:layout_marginEnd="@dimen/margin_end_card"
            app:cardElevation="@dimen/card_Elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_Avatar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/layout_margin_Vertical">

                <TextView
                    android:id="@+id/Text_Prenom_Neighbour_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_Titre_Start"
                    android:textSize="@dimen/text_Titre_Size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@tools:sample/first_names" />

                <ImageView
                    android:id="@+id/image_phone"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginStart="@dimen/marginStartIcon"
                    android:layout_marginTop="@dimen/marginTopIcon"
                    android:importantForAccessibility="no"
                    android:src="@android:drawable/stat_sys_phone_call"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_Position"
                    app:tint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/image_Position"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginStart="@dimen/marginStartIcon"
                    android:layout_marginTop="@dimen/marginTopIcon"
                    android:importantForAccessibility="no"
                    android:src="@drawable/location_on_40px"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Text_Prenom_Neighbour_card"
                    app:tint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/image_world"
                    android:layout_width="@dimen/icon_width"
                    android:layout_height="@dimen/icon_height"
                    android:layout_marginStart="@dimen/marginStartIcon"
                    android:layout_marginTop="@dimen/marginTopIcon"
                    android:importantForAccessibility="no"
                    android:src="@drawable/language_40px"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_phone"
                    app:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/textPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_Pos_Num_Face_Start"
                    app:layout_constraintBottom_toBottomOf="@+id/image_Position"
                    app:layout_constraintStart_toEndOf="@+id/image_Position"
                    tools:text="Position" />

                <TextView
                    android:id="@+id/textNumeroTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_Pos_Num_Face_Start"
                    app:layout_constraintBottom_toBottomOf="@+id/image_phone"
                    app:layout_constraintStart_toEndOf="@+id/image_phone"
                    tools:text="NumeroTel" />

                <TextView
                    android:id="@+id/textLienFaceBook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_Pos_Num_Face_Start"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/image_world"
                    app:layout_constraintStart_toEndOf="@+id/image_world"
                    tools:text="LienFaceBook" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_divider"
                    android:layout_marginTop="@dimen/margin_Top_divider"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Text_Prenom_Neighbour_card" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/imageButton_Arrow_Back"
            android:layout_width="@dimen/width_ImageBack"
            android:layout_height="@dimen/height_ImageBack"
            android:layout_marginStart="@dimen/margin_Start_Back"
            android:layout_marginTop="@dimen/margin_Top_Back"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/arrow_back_40px"
            app:layout_constraintStart_toStartOf="@+id/imageView_Avatar"
            app:layout_constraintTop_toTopOf="@+id/imageView_Avatar"
            app:tint="@android:color/white" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_card_start"
            android:layout_marginTop="@dimen/margin_top_card"
            android:layout_marginEnd="@dimen/margin_end_card"
            android:layout_marginBottom="16dp"
            app:cardElevation="@dimen/card_Elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/layout_margin_Vertical">

                <TextView
                    android:id="@+id/text_About_Me"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_Titre_Start"
                    android:text="@string/About_me"
                    android:textSize="@dimen/text_Titre_Size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_Description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_Start_End_description"
                    android:layout_marginEnd="@dimen/margin_Start_End_description"
                    android:layout_marginTop="@dimen/margin_Top_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_About_Me"
                    tools:text="@tools:sample/lorem[20]" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider2"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/height_divider"
                    android:layout_marginTop="@dimen/margin_Top_divider"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_About_Me" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>