...
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/app_name">

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorHeight="3dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem"
...
